# docs-and-notes

./: README.md  Scheme.md  compile_gcc_from_source.md  cpp-notes.md  emacs.org  example_vimrc  faq-c++.md  git.md  google-advanced-search.md  grep.md  haskell-reading-materials.md  install-ubuntu.md  markdown.md  misc.md  proj.md
assets/: sources.list
configure-files/: README.md  con_wifi.sh  fstab  my_configs.vim  spacemacs  utils.md
configure-files/markdown/: markdown-details-collapsible.md
configure-files/proj_cmake/unit-test/: CMakeLists.txt  README.md
configure-files/proj_cmake/unit-test/include/: kata_consts.h  minunit.h  search.h  sort.h  tests.h  utils.h
configure-files/proj_cmake/unit-test/res/: key_index_count.c  len_5  shuffle.py  shuffled_names.txt
configure-files/proj_cmake/unit-test/src/: main.c
configure-files/proj_cmake/unit-test/src/search/: binary_search.c  linear_search.c  test_search.c
configure-files/proj_cmake/unit-test/src/sort/: insertion_sort.c  quick_sort.c  test_sort.c
configure-files/proj_cmake/unit-test/src/utils/: utils.c
cpp/: faq-c++.md  move-forward.md
scripts/: pcap264.py
